I've completed the `mcr` and `code` modules. Here's what I did:
- Implemented diff application in the `code` module.
- Improved UI feedback in the `code` module.
- Added tests for the `mcr` module and implemented remove methods.